Little family intern joke added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <header class="Class_HeaderWrapper">
     <h1 class="Class_Headlines">Online Vier-Gewinnt</h3>
-    <p>Spiele gegen einen Freund oder gegen die KI!</p>
+    <p>Nach Mamas Idee :-*</p>
   </header>
 
   <div class="Class_MainWrapper">
