--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <body>
   <header class="Class_HeaderWrapper">
     <h1 class="Class_Headlines">Online Vier-Gewinnt</h3>
-    <p>Nach Mamas Idee :-*</p>
+    <p>Spiele gegen einen Freund oder gegen die KI!</p>
   </header>
 
   <div class="Class_MainWrapper">
     <div class="Class_LeftSidebarWrapper">
-      <h3 class="Class_Players">Player 1</h3>
+      <h3 class="Class_Players">Spieler 1</h3>
     </div>
     
     <div class="Class_GameboardWrapper">
@@ -48,16 +48,14 @@
         </div>
     </div>
     <div class="Class_RightSidebarWrapper">
-      <h3 class="Class_Players">Player 2</h3>
+      <h3 class="Class_Players">Spieler 2</h3>
     </div>
   </div>
 
   <footer class="Class_FooterWrapper">
-    <h3 class="Class_Headlines">This is the Footer-Headline</h3>
-    <p>This is the Footer Text.........</p>
+    <input type="button" value="Starte Spiel" id="ID_Start_Button" class="Buttons">
   </footer>
-  
-
+  <script type="text/javascript" src='Folder_Javascript/my_library.js'></script>
   <script type='text/javascript' src='Folder_Javascript/script.js'></script>
 </body>
 </html>
