--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
   </header>
 
   <div class="Class_MainWrapper">
-    <div class="Class_LeftSidebarWrapper">
-      <h3 class="Class_Players">Spieler 1</h3>
-    </div>
-    
+    <div class="Class_LeftSidebarWrapper" id="ID_LeftSidebarWrapper">
+      <h3 class="Class_Players" id="ID_Player_1_Headline">Spieler 1, Wähle einen Namen:</h3>
+      <span class="Class_Naming_Span">
+      <input type="text" max="15" value="Spieler 1" class="Class_Inputs" id="ID_Player_1_Name" name="Player_1_ Name">
+      <img src="./Folder_Graphics/Folder_Icons/simpleicons_org/circleci.svg" id="ID_SVG_Player_1" class="Class_Player_Name_Buttons" for="Player_1_Name" title="Speichere den Namen von Spieler 1!" alt="Save the name of Player 1!">
+    </span>
+    </div>   
     <div class="Class_GameboardWrapper">
         <div id="ID_Column1" class="Class_Columns">
         <div id="ID_C1R1" class="Class_TopCells"></div><div id="ID_C1R2" class="Class_Cells"></div><div id="ID_C1R3" class="Class_Cells"></div><div id="ID_C1R4" class="Class_Cells"></div><div id="ID_C1R5" class="Class_Cells"></div><div id="ID_C1R6" class="Class_Cells"></div><div id="ID_C1R7" class="Class_Cells"></div>
@@ -47,13 +50,16 @@
         <div id="ID_C7R1" class="Class_TopCells"></div><div id="ID_C7R2" class="Class_Cells"></div><div id="ID_C7R3" class="Class_Cells"></div><div id="ID_C7R4" class="Class_Cells"></div><div id="ID_C7R5" class="Class_Cells"></div><div id="ID_C7R6" class="Class_Cells"></div><div id="ID_C7R7" class="Class_Cells"></div>
         </div>
     </div>
-    <div class="Class_RightSidebarWrapper">
-      <h3 class="Class_Players">Spieler 2</h3>
+    <div class="Class_RightSidebarWrapper" id="ID_RightSidebarWrapper">
+      <h3 class="Class_Players" id="ID_Player_2_Headline">Spieler 2, Wähle einen Namen:</h3>
+      <span class="Class_Naming_Span">
+      <img src="./Folder_Graphics/Folder_Icons/simpleicons_org/circleci.svg" id="ID_SVG_Player_2" class="Class_Player_Name_Buttons" for="Player_2_Name" title="Speichere den Namen von Spieler 2!" alt="Save the name of Player 2!">
+      <input type="text" max="15" value="Spieler 2" class="Class_Inputs" id="ID_Player_2_Name" name="Player_2_ Name">
+    </span>
     </div>
   </div>
-
   <footer class="Class_FooterWrapper">
-    <input type="button" value="Starte Spiel" id="ID_Start_Button" class="Buttons">
+    <input type="button" value="Spiel starten" id="ID_Start_Button" class="Buttons">
   </footer>
   <script type="text/javascript" src='Folder_Javascript/my_library.js'></script>
   <script type='text/javascript' src='Folder_Javascript/script.js'></script>
