Added features: Translation Manager & Page-Library, new reusable js functions for better CSS-Usage, Settings-Menu, improved animations and Style

--- a/index.html
+++ b/index.html
@@ -1,67 +1,134 @@
 <!doctype html>
 <html lang='de'>
-<head>
-    <title>Online Vier-Gewinnt</title>
-    <!-- Javascript und CSS Dateieinbindung -->
-    <link rel='stylesheet' type='text/css' href='Folder_CSS/style.css'>
-    <!-- Favicon & AppleTouch-->
-    <link rel='icon' sizes='16x16' href='Folder_Graphics/Folder_Icons/pb_200x200.ico'>
-    <link rel='apple-touch-icon' sizes='120x120' href='Folder_Graphics/Folder_Icons/pb_200x200.png' />
-    <!-- Metadaten  -->
-    <meta name='author' content='Stefan Bartl'>
-    <meta name='description' content=''>
-    <meta charset='UTF-8'>  
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-<body>
-  <header class="Class_HeaderWrapper">
-    <h1 class="Class_Headlines">Online Vier-Gewinnt</h3>
-    <p>Spiele gegen einen Freund oder gegen die KI!</p>
-  </header>
 
+<head>
+  <title>+++ Online Four-Wins / 4-Gewinnt +++</title>
+  <!-- Javascript und CSS Dateieinbindung -->
+  <link rel='stylesheet' type='text/css' href='Folder_CSS/style.css'>
+  <!-- Favicon & AppleTouch-->
+  <link rel='icon' sizes='16x16' href='Folder_Graphics/Folder_Icons/pb_200x200.ico'>
+  <link rel='apple-touch-icon' sizes='120x120' href='Folder_Graphics/Folder_Icons/pb_200x200.png' />
+  <!-- Metadaten  -->
+  <meta name='author' content='Stefan Bartl'>
+  <meta name='description'
+    content='Online-Version of the well knowed family Game "Four-Wins". Play it against friends or KI!'>
+  <meta charset='UTF-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+</head>
+
+<body>
+  <header class="Class_HeaderWrapper" id="ID_Header">
+    <span class="Class_Headline">
+      <h1 class="Class_HeadlineTop" id="ID_Headline">
+        </h3>
+        <span class="Class_Settings"><img src="./Folder_Graphics/iconmonstr_com/cog-outline.svg" id="ID_Settings"
+            title="Einstellungen" alt="Clickable picture to get to the settings!"></span>
+        <div class="Class_Settings_Menu" id="ID_Settings_Menu">
+          <h2 id="ID_info"></h2>
+          <h2 id="ID_starting"></h2>
+          <h2 id="ID_colour"></h2>
+          <h2 id="ID_sound"></h2>
+          <h2 id="ID_language"></h2>
+          <select name="LanguageMenu" id="ID_Language_Menu">
+            <option value="Deutsch" id="ID_german" selected>Deutsch</option>
+            <option value="English" id="ID_english">Englisch</option>
+          </select>
+          <h2 id="ID_contact"></h2>
+          <h2 id="ID_credits"></h2>
+        </div>
+    </span>
+    <p id="ID_Header_p"></p>
+  </header>
   <div class="Class_MainWrapper">
     <div class="Class_LeftSidebarWrapper" id="ID_LeftSidebarWrapper">
-      <h3 class="Class_Players" id="ID_Player_1_Headline">Spieler 1, Wähle einen Namen:</h3>
+      <h3 class="Class_Players" id="ID_Player_1_Headline"></h3>
       <span class="Class_Naming_Span">
-      <input type="text" max="15" value="Spieler 1" class="Class_Inputs" id="ID_Player_1_Name" name="Player_1_ Name">
-      <img src="./Folder_Graphics/Folder_Icons/simpleicons_org/circleci.svg" id="ID_SVG_Player_1" class="Class_Player_Name_Buttons" for="Player_1_Name" title="Speichere den Namen von Spieler 1!" alt="Save the name of Player 1!">
-    </span>
-    </div>   
-    <div class="Class_GameboardWrapper">
-        <div id="ID_Column1" class="Class_Columns">
-        <div id="ID_C1R1" class="Class_TopCells"></div><div id="ID_C1R2" class="Class_Cells"></div><div id="ID_C1R3" class="Class_Cells"></div><div id="ID_C1R4" class="Class_Cells"></div><div id="ID_C1R5" class="Class_Cells"></div><div id="ID_C1R6" class="Class_Cells"></div><div id="ID_C1R7" class="Class_Cells"></div>
-        </div>
-        <div id="ID_Column2" class="Class_Columns">
-        <div id="ID_C2R1" class="Class_TopCells"></div><div id="ID_C2R2" class="Class_Cells"></div><div id="ID_C2R3" class="Class_Cells"></div><div id="ID_C2R4" class="Class_Cells"></div><div id="ID_C2R5" class="Class_Cells"></div><div id="ID_C2R6" class="Class_Cells"></div><div id="ID_C2R7" class="Class_Cells"></div>
-        </div>
-        <div id="ID_Column3" class="Class_Columns">
-        <div id="ID_C3R1" class="Class_TopCells"></div><div id="ID_C3R2" class="Class_Cells"></div><div id="ID_C3R3" class="Class_Cells"></div><div id="ID_C3R4" class="Class_Cells"></div><div id="ID_C3R5" class="Class_Cells"></div><div id="ID_C3R6" class="Class_Cells"></div><div id="ID_C3R7" class="Class_Cells"></div>
-        </div>
-        <div id="ID_Column4" class="Class_Columns">
-        <div id="ID_C4R1" class="Class_TopCells"></div><div id="ID_C4R2" class="Class_Cells"></div><div id="ID_C4R3" class="Class_Cells"></div><div id="ID_C4R4" class="Class_Cells"></div><div id="ID_C4R5" class="Class_Cells"></div><div id="ID_C4R6" class="Class_Cells"></div><div id="ID_C4R7" class="Class_Cells"></div>
-        </div>
-        <div id="ID_Column5" class="Class_Columns">
-        <div id="ID_C5R1" class="Class_TopCells"></div><div id="ID_C5R2" class="Class_Cells"></div><div id="ID_C5R3" class="Class_Cells"></div><div id="ID_C5R4" class="Class_Cells"></div><div id="ID_C5R5" class="Class_Cells"></div><div id="ID_C5R6" class="Class_Cells"></div><div id="ID_C5R7" class="Class_Cells"></div>
-        </div>
-        <div id="ID_Column6" class="Class_Columns">
-        <div id="ID_C6R1" class="Class_TopCells"></div><div id="ID_C6R2" class="Class_Cells"></div><div id="ID_C6R3" class="Class_Cells"></div><div id="ID_C6R4" class="Class_Cells"></div><div id="ID_C6R5" class="Class_Cells"></div><div id="ID_C6R6" class="Class_Cells"></div><div id="ID_C6R7" class="Class_Cells"></div>
-        </div>
-        <div id="ID_Column7" class="Class_Columns">
-        <div id="ID_C7R1" class="Class_TopCells"></div><div id="ID_C7R2" class="Class_Cells"></div><div id="ID_C7R3" class="Class_Cells"></div><div id="ID_C7R4" class="Class_Cells"></div><div id="ID_C7R5" class="Class_Cells"></div><div id="ID_C7R6" class="Class_Cells"></div><div id="ID_C7R7" class="Class_Cells"></div>
-        </div>
+        <input type="text" max="15" class="Class_Inputs" id="ID_Player_1_Name" name="Player_1_ Name">
+        <img src="./Folder_Graphics/Folder_Icons/simpleicons_org/circleci.svg" id="ID_SVG_Player_1"
+          class="Class_Player_Name_Buttons" for="Player_1_Name" title="Speichere den Namen für spätere Spiele!"
+          alt="Ein Button, mit dem du den Namen für spätere Spiele speichern kannst.">
+      </span>
+    </div>
+    <div class="Class_GameboardWrapper" id="ID_GameboardWrapper">
+      <div id="ID_Column1" class="Class_Columns">
+        <div id="ID_C1R1" class="Class_TopCells"></div>
+        <div id="ID_C1R2" class="Class_Cells"></div>
+        <div id="ID_C1R3" class="Class_Cells"></div>
+        <div id="ID_C1R4" class="Class_Cells"></div>
+        <div id="ID_C1R5" class="Class_Cells"></div>
+        <div id="ID_C1R6" class="Class_Cells"></div>
+        <div id="ID_C1R7" class="Class_Cells"></div>
+      </div>
+      <div id="ID_Column2" class="Class_Columns">
+        <div id="ID_C2R1" class="Class_TopCells"></div>
+        <div id="ID_C2R2" class="Class_Cells"></div>
+        <div id="ID_C2R3" class="Class_Cells"></div>
+        <div id="ID_C2R4" class="Class_Cells"></div>
+        <div id="ID_C2R5" class="Class_Cells"></div>
+        <div id="ID_C2R6" class="Class_Cells"></div>
+        <div id="ID_C2R7" class="Class_Cells"></div>
+      </div>
+      <div id="ID_Column3" class="Class_Columns">
+        <div id="ID_C3R1" class="Class_TopCells"></div>
+        <div id="ID_C3R2" class="Class_Cells"></div>
+        <div id="ID_C3R3" class="Class_Cells"></div>
+        <div id="ID_C3R4" class="Class_Cells"></div>
+        <div id="ID_C3R5" class="Class_Cells"></div>
+        <div id="ID_C3R6" class="Class_Cells"></div>
+        <div id="ID_C3R7" class="Class_Cells"></div>
+      </div>
+      <div id="ID_Column4" class="Class_Columns">
+        <div id="ID_C4R1" class="Class_TopCells"></div>
+        <div id="ID_C4R2" class="Class_Cells"></div>
+        <div id="ID_C4R3" class="Class_Cells"></div>
+        <div id="ID_C4R4" class="Class_Cells"></div>
+        <div id="ID_C4R5" class="Class_Cells"></div>
+        <div id="ID_C4R6" class="Class_Cells"></div>
+        <div id="ID_C4R7" class="Class_Cells"></div>
+      </div>
+      <div id="ID_Column5" class="Class_Columns">
+        <div id="ID_C5R1" class="Class_TopCells"></div>
+        <div id="ID_C5R2" class="Class_Cells"></div>
+        <div id="ID_C5R3" class="Class_Cells"></div>
+        <div id="ID_C5R4" class="Class_Cells"></div>
+        <div id="ID_C5R5" class="Class_Cells"></div>
+        <div id="ID_C5R6" class="Class_Cells"></div>
+        <div id="ID_C5R7" class="Class_Cells"></div>
+      </div>
+      <div id="ID_Column6" class="Class_Columns">
+        <div id="ID_C6R1" class="Class_TopCells"></div>
+        <div id="ID_C6R2" class="Class_Cells"></div>
+        <div id="ID_C6R3" class="Class_Cells"></div>
+        <div id="ID_C6R4" class="Class_Cells"></div>
+        <div id="ID_C6R5" class="Class_Cells"></div>
+        <div id="ID_C6R6" class="Class_Cells"></div>
+        <div id="ID_C6R7" class="Class_Cells"></div>
+      </div>
+      <div id="ID_Column7" class="Class_Columns">
+        <div id="ID_C7R1" class="Class_TopCells"></div>
+        <div id="ID_C7R2" class="Class_Cells"></div>
+        <div id="ID_C7R3" class="Class_Cells"></div>
+        <div id="ID_C7R4" class="Class_Cells"></div>
+        <div id="ID_C7R5" class="Class_Cells"></div>
+        <div id="ID_C7R6" class="Class_Cells"></div>
+        <div id="ID_C7R7" class="Class_Cells"></div>
+      </div>
     </div>
     <div class="Class_RightSidebarWrapper" id="ID_RightSidebarWrapper">
-      <h3 class="Class_Players" id="ID_Player_2_Headline">Spieler 2, Wähle einen Namen:</h3>
+      <h3 class="Class_Players" id="ID_Player_2_Headline"></h3>
       <span class="Class_Naming_Span">
-      <img src="./Folder_Graphics/Folder_Icons/simpleicons_org/circleci.svg" id="ID_SVG_Player_2" class="Class_Player_Name_Buttons" for="Player_2_Name" title="Speichere den Namen von Spieler 2!" alt="Save the name of Player 2!">
-      <input type="text" max="15" value="Spieler 2" class="Class_Inputs" id="ID_Player_2_Name" name="Player_2_ Name">
-    </span>
+        <img src="./Folder_Graphics/Folder_Icons/simpleicons_org/circleci _GESPIEGELTxcf.png" id="ID_SVG_Player_2"
+          class="Class_Player_Name_Buttons" for="Player_2_Name" title="Speichere den Namen für spätere Spiele!"
+          alt="Ein Button, mit dem du den Namen für spätere Spiele speichern kannst.">
+        <input type="text" max="15" class="Class_Inputs" id="ID_Player_2_Name" name="Player_2_ Name">
+      </span>
     </div>
   </div>
   <footer class="Class_FooterWrapper">
-    <input type="button" value="Spiel starten" id="ID_Start_Button" class="Buttons">
+    <button type="button" id="ID_Start_Button" class="Buttons"></button>
   </footer>
   <script type="text/javascript" src='Folder_Javascript/my_library.js'></script>
   <script type='text/javascript' src='Folder_Javascript/script.js'></script>
 </body>
+
 </html>
