Swap names with turns added. Game Screen added layout and styling improved. Responsive mobile & tablet mode corrected.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </span>
     <p id="ID_Header_p"></p>
   </header>
-  <div class="Class_MainWrapper">
+  <div class="Class_MainWrapper" id="ID_MainWrapper">
     <div class="Class_LeftSidebarWrapper" id="ID_LeftSidebarWrapper">
       <h3 class="Class_Players" id="ID_Player_1_Headline"></h3>
       <span class="Class_Naming_Span">
@@ -124,7 +124,7 @@
       </span>
     </div>
   </div>
-  <footer class="Class_FooterWrapper">
+  <footer class="Class_FooterWrapper" id="ID_FooterWrapper">
     <button type="button" id="ID_Start_Button" class="Buttons"></button>
   </footer>
   <script type="text/javascript" src='Folder_Javascript/my_library.js'></script>
