Bugs removed and CSS
 Removed small Bug about no valid naming variables where available by first game and no names were choosen. Fixed Game_End_Screen Bug: Gameboard was way to big on large displays and made the screen scrollable. Removed scrolling from starting screen. Fixed positions on mobile, Settings Menu styling first steps.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <span class="Class_Settings"><img src="./Folder_Graphics/iconmonstr_com/cog-outline.svg" id="ID_Settings"
             title="" alt="Clickable picture to get to the settings!"></span>
         <div class="Class_Settings_Menu" id="ID_Settings_Menu">
+          <span id="ID_Setting_Span">
           <h3 id="ID_Info"></h3>
           <h3 id="ID_Starting"></h3>
 
@@ -40,23 +41,28 @@
             <option value="Deutsch" id="ID_German" selected>Deutsch</option>
             <option value="English" id="ID_English">Englisch</option>
           </select>
+
           <h3 id="Stats">Stats against CPU</h3>
           <details>
             <summary>Against KI Easy</summary>
             <span class="Class_Settings_Summarys"><p id="ID_Easy_1">0</p> / <p id="ID_Easy_2">0</p> / <p id="ID_Easy_3">0</p></span>
           <button id="ID_Reset_Easy" class="Class_Reset_Buttonsd">Reset Easy Stats</button>
           </details>
+          <h3>       </h3>
           <details>
             <summary>Against KI Normal</summary>
             <span class="Class_Settings_Summarys"><p id="ID_Normal_1">0</p> / <p id="ID_Normal_2">0</p> / <p id="ID_Normal_3">0</p></span>
             <button id="ID_Reset_Normal" class="Class_Reset_Buttonsd">Reset Normal Stats</button>
           </details>       
+          <h3>                 </h3>
            <h3 id="ID_Contact"></h3>
           <h3 id="ID_Credits"></h3>
-          <button id="ID_Delete_All">Delete all Data</button>
-          <p>Stats, Language, Player Names</p>
+          <button id="ID_Delete_All" title="Delete all stats, player names and Browser Language from your Browser storage">Delete all Data</button>
+        </span>
         </div>
     </span>
+
+
     <p id="ID_Header_p"></p>
   </header>
 
