Improved Layout, Added topCell-Validator, Added KI Easy, Added KI Placement Validator, Added KI Integration in Game and DOM
Improved Layout: Header and Gameboard Start Screen on mobile.

Added topCell-Validator:  To lock placements over the Gameboard.

Added  KI: KI Easy integration completed.

Added KI Placement Validator: Function to proof for KI if placement in column is possible.

 Added KI Integration in Game and DOM: Integration in DOM with Drodown-Selector and also to Game, to let it know anytime if its a game against KI and against which Level.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
 <body>
   <header class="Class_HeaderWrapper" id="ID_Header">
-    <span class="Class_Headline">
       <h1 class="Class_HeadlineTop" id="ID_Headline">
         </h3>
         <span class="Class_Settings"><img src="./Folder_Graphics/Folder_Icons/iconmonstr_com/cog-outline.svg" id="ID_Settings"
@@ -60,7 +59,6 @@
           <button id="ID_Delete_All" title="Delete all stats, player names and Browser Language from your Browser storage">Delete all Data</button>
         </span>
         </div>
-    </span>
 
 
     <p id="ID_Header_p"></p>
@@ -156,6 +154,14 @@
   </div>
 
   <footer class="Class_FooterWrapper" id="ID_FooterWrapper">
+    <div id="ID_Choose_KI_Div">
+      <h6>Play against CPU?</h6>
+      <select name="Choose_KI" id="ID_Choose_KI">
+        <option value="No">No</option>
+        <option value="KI_Easy" selected>KI_Easy</option>
+        <option value="KI_Normal">KI_Normal</option>
+    </select>
+    </div>
     <button type="button" id="ID_Start_Button" class="Buttons"></button>
   </footer>
 
