Removed Bug with updating Stats, Removed Bug with naming, Added Translation,  Added Thinking_Effect for KI &  Humans , Bug with KI removed
Removed Bug with updating Stats, Removed Bug with naming if choosed "No"-Game against CPU, Added Translation in "Play against" Dropdown, Thinking_Effect for KI, Thinking Effect for Humans, Bug removed about trigger false KI_Level to Game Object,

--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
 
   <footer class="Class_FooterWrapper" id="ID_FooterWrapper">
     <div id="ID_Choose_KI_Div">
-      <h6>Play against CPU?</h6>
+      <h6 id="ID_Play_Against"></h6>
       <select name="Choose_KI" id="ID_Choose_KI">
-        <option value="No">No</option>
-        <option value="KI_Easy" selected>KI_Easy</option>
-        <option value="KI_Normal">KI_Normal</option>
+        <option value="No" id="ID_No">No</option>
+        <option value="KI_Easy" id="ID_Easy_Text" selected></option>
+        <option value="KI_Normal">KI Normal</option>
     </select>
     </div>
     <button type="button" id="ID_Start_Button" class="Buttons"></button>
