--- a/index.html
+++ b/index.html
@@ -19,48 +19,64 @@
 <body>
   <header class="Class_HeaderWrapper" id="ID_Header">
       <h1 class="Class_HeadlineTop" id="ID_Headline">
-        </h3>
+        </h1>
         <span class="Class_Settings"><img src="./Folder_Graphics/Folder_Icons/iconmonstr_com/cog-outline.svg" id="ID_Settings"
             title="" alt="Clickable picture to get to the settings!"></span>
         <div class="Class_Settings_Menu" id="ID_Settings_Menu">
           <span id="ID_Setting_Span">
-          <h3 id="ID_Info"></h3>
-          <h3 id="ID_Starting"></h3>
-
+            <div id="ID_Info_Container">
+            <h3 id="ID_Info"></h3>
+          </div>
+          <div id="ID_Colour_Container">
+          <h3 id="ID_Label_Colour"></h3>
           <div class="Class_Colour_Toggle">
           <label id="Label_Colour">
-              Farbwahl / Colour choose Player 1
+               Coin
             <input type="checkbox" id="ID_Colour_Checkbox">
             <span class="Class_Colour_Slider"></span>
           </label>
         </div>
+      </div>
+        <div id="ID_Sound_Container">
           <h3 id="ID_Sound"></h3>
+        </div>
+          <div id="ID_Language_Container">
           <h3 id="ID_Language"></h3>
           <select name="LanguageMenu" id="ID_Language_Menu">
             <option value="Deutsch" id="ID_German" selected>Deutsch</option>
             <option value="English" id="ID_English">Englisch</option>
           </select>
-
-          <h3 id="Stats">Stats against CPU</h3>
-          <details>
-            <summary>Against KI Easy</summary>
+        </div>
+         <div id="ID_Stats_Container">
+          <h4 id="ID_Stats"></h4>
+          <div class="Class_StatsWrapper" id="ID_Stats_First_Wrapper">
+          <h5>KI Easy</h5>
+          <details class="Class_Summary_Details">
+            <summary id="ID_Stats_Easy"></summary>
             <span class="Class_Settings_Summarys"><p id="ID_Easy_1">0</p> / <p id="ID_Easy_2">0</p> / <p id="ID_Easy_3">0</p></span>
-          <button id="ID_Reset_Easy" class="Class_Reset_Buttonsd">Reset Easy Stats</button>
+          <button id="ID_Reset_Easy" class="Class_Reset_Buttons">Reset KI Normal</button>
           </details>
-          <h3>       </h3>
-          <details>
-            <summary>Against KI Normal</summary>
+          </div>
+          <div class="Class_StatsWrapper" id="ID_Stats_Second_Wrapper">
+          <h5>KI Normal</h5>
+          <details class="Class_Summary_Details">
+            <summary id="ID_Stats_Normal"></summary>
             <span class="Class_Settings_Summarys"><p id="ID_Normal_1">0</p> / <p id="ID_Normal_2">0</p> / <p id="ID_Normal_3">0</p></span>
-            <button id="ID_Reset_Normal" class="Class_Reset_Buttonsd">Reset Normal Stats</button>
+            <button id="ID_Reset_Normal" class="Class_Reset_Buttons">Reset KI Normal</button>
           </details>       
-          <h3>                 </h3>
+          </div>
+          </div>
+          <div id="ID_Contacts_Container">
            <h3 id="ID_Contact"></h3>
+          </div>
+          <div id="ID_Credits_Container">
           <h3 id="ID_Credits"></h3>
-          <button id="ID_Delete_All" title="Delete all stats, player names and Browser Language from your Browser storage">Delete all Data</button>
+        </div>
+        <div id="ID_Delete_All_Container">
+          <button id="ID_Delete_All" title="Delete all stats, player names and Browser Language from your Browser storage"></button>
+        </div>
         </span>
         </div>
-
-
     <p id="ID_Header_p"></p>
   </header>
 
