Finished Settings Menu Animation

--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
 
 <body>
   <header class="Class_HeaderWrapper" id="ID_Header">
+    <div id="ID_Head_Text">
       <h1 class="Class_HeadlineTop" id="ID_Headline">
         </h1>
+        <p id="ID_Header_p"></p>
+      </div>
         <span class="Class_Settings"><img src="./Folder_Graphics/Folder_Icons/iconmonstr_com/cog-outline.svg" id="ID_Settings"
-            title="" alt="Clickable picture to get to the settings!"></span>
+            title="" alt="Clickable picture to get to the settings!">
         <div class="Class_Settings_Menu" id="ID_Settings_Menu">
           <span id="ID_Setting_Span">
             <div id="ID_Info_Container">
@@ -77,7 +80,8 @@
         </div>
         </span>
         </div>
-    <p id="ID_Header_p"></p>
+      </span>
+    
   </header>
 
   <div class="Class_MainWrapper" id="ID_MainWrapper">
