--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       </div>
         <div id="ID_Sound_Container">
           <h3 id="ID_Sound"></h3>
+          <input type="checkbox" id="ID_Sound_Checkbox" checked>
         </div>
           <div id="ID_Language_Container">
           <h3 id="ID_Language"></h3>
