Added Title / Alt to all DOM-Elements, Improved KI Valid Placement functions, Improved KI Normal Algorhytmus, Removed Bug locking full Columns

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <h3 id="ID_Credits"></h3>
         </div>
         <div id="ID_Delete_All_Container">
-          <button id="ID_Delete_All" title="Delete all stats, player names and Browser Language from your Browser storage"></button>
+          <button id="ID_Delete_All"></button>
         </div>
         </span>
         </div>
@@ -92,8 +92,7 @@
       <span class="Class_Naming_Span">
         <input type="text" max="15" class="Class_Inputs" id="ID_Player_1_Name" name="Player_1_ Name">
         <img src="./Folder_Graphics/Folder_Icons/simpleicons_org/circleci.svg" id="ID_SVG_Player_1"
-          class="Class_Player_Name_Buttons" for="Player_1_Name" title="Speichere den Namen für spätere Spiele!"
-          alt="Ein Button, mit dem du den Namen für spätere Spiele speichern kannst.">
+          class="Class_Player_Name_Buttons" for="Player_1_Name">
       </span>
     </section>
     
@@ -167,8 +166,7 @@
       <h3 class="Class_Players" id="ID_Player_2_Headline"></h3>
       <span class="Class_Naming_Span">
         <img src="./Folder_Graphics/Folder_Icons/simpleicons_org/circleci _GESPIEGELTxcf.png" id="ID_SVG_Player_2"
-          class="Class_Player_Name_Buttons" for="Player_2_Name" title="Speichere den Namen für spätere Spiele!"
-          alt="Ein Button, mit dem du den Namen für spätere Spiele speichern kannst.">
+          class="Class_Player_Name_Buttons" for="Player_2_Name">
         <input type="text" max="15" class="Class_Inputs" id="ID_Player_2_Name" name="Player_2_ Name">
       </span>
     </div>
@@ -179,8 +177,8 @@
       <h6 id="ID_Play_Against"></h6>
       <select name="Choose_KI" id="ID_Choose_KI">
         <option value="No" id="ID_No">No</option>
-        <option value="KI_Easy" id="ID_Easy_Text" selected></option>
-        <option value="KI_Normal">KI Normal</option>
+        <option value="KI Easy" id="ID_Easy_Text" selected></option>
+        <option value="KI Normal">KI Normal</option>
     </select>
     </div>
     <button type="button" id="ID_Start_Button" class="Buttons"></button>
