Created a reusable, designable Toggle-Slider annd added it to script; Improved Settings Menu Layout

--- a/index.html
+++ b/index.html
@@ -31,11 +31,7 @@
           <div id="ID_Colour_Container">
           <h3 id="ID_Label_Colour"></h3>
           <div class="Class_Colour_Toggle">
-          <label id="Label_Colour">
-               Coin
-            <input type="checkbox" id="ID_Colour_Checkbox">
-            <span class="Class_Colour_Slider"></span>
-          </label>
+            <span class="Class_Colour_Slider" id="ID_Colour_Slider"><div id="ID_Toggle_Button"></div></span>
         </div>
       </div>
         <div id="ID_Sound_Container">
