Folder Structure III

--- a/index.html
+++ b/index.html
@@ -183,10 +183,14 @@
     <button type="button" id="ID_Start_Button" class="Buttons"></button>
   </footer>
 
-
+ <!-- #region Javascript-Files--> 
+  <script type="text/javascript" src='Folder_Javascript/end_screen.js'></script>
+  <script type="text/javascript" src='Folder_Javascript/validation.js'></script>
+  <script type="text/javascript" src='Folder_Javascript/cpu_player.js'></script>
+  <script type="text/javascript" src='Folder_Javascript/translation.js'></script>
   <script type="text/javascript" src='Folder_Javascript/library.js'></script>
   <script type='text/javascript' src='Folder_Javascript/script.js'></script>
-
+<!-- #endregion -->
 
 </body>
 </html>
