Added Prepare Game function. Removed smaller bugs.
New Prepare Game Function,.

Eliminated duplicated variable invoking.

Removed Bug with correct Player 2 Naming / KI Naming.

--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
       <h6 id="ID_Play_Against"></h6>
       <select name="Choose_KI" id="ID_Choose_KI">
         <option value="No" id="ID_No"></option>
-        <option value="KI Easy" id="ID_Easy_Text" selected></option>
-        <option value="KI Normal" id="ID_Normal_Text"></option>
+        <option value="CPU Easy" id="ID_Easy_Text" selected></option>
+        <option value="CPU Normal" id="ID_Normal_Text"></option>
     </select>
     </div>
     <button type="button" id="ID_Start_Button" class="Buttons"></button>
