Removed Minor buug in choosing colour if there is no localStorage variable.  Improved stylings.
-) Removed minor Choosed Color Bug if there is no local Storage variable for it.
-) Improved Input Styling
-) Improved Settings Menu Styling

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <section class="Class_LeftSidebarWrapper" id="ID_LeftSidebarWrapper">
         <h3 class="Class_Players" id="ID_Player_1_Headline"></h3>
         <span class="Class_Naming_Span">
-          <input type="text" max="15" class="Class_Inputs" id="ID_Player_1_Name" name="Player_1_ Name">
+          <input type="text" max="15" id="ID_Player_1_Name" name="Player_1_ Name">
           <img src="./Folder_Graphics/Folder_Icons/simpleicons_org/circleci.svg" id="ID_SVG_Player_1"
             class="Class_Player_Name_Buttons" for="Player_1_Name">
         </span>
@@ -165,7 +165,7 @@
         <span class="Class_Naming_Span">
           <img src="./Folder_Graphics/Folder_Icons/simpleicons_org/circleci _GESPIEGELTxcf.png" id="ID_SVG_Player_2"
             class="Class_Player_Name_Buttons" for="Player_2_Name">
-          <input type="text" max="15" class="Class_Inputs" id="ID_Player_2_Name" name="Player_2_ Name">
+          <input type="text" max="15" id="ID_Player_2_Name" name="Player_2_ Name">
         </span>
       </section>
   </div>
