--- a/index.html
+++ b/index.html
@@ -161,11 +161,23 @@
 
     <div class="Class_Settings_Menu" id="ID_Settings_Menu">
       <span id="ID_Setting_Span">
-        <div id="ID_Gameboard_Size">
-          <input type="number" name="gameboard_size1" id="ID_GameboardSize1" />
-          <input type="number" name="gameboard_size2" id="ID_GameboardSize2" />
-          <button id="ID_Gameboard_Size_Button">Size</button>
-        </div>
+        <span id="ID_Gameboard_Span">
+          <h3 id="ID_Grid">Gameboard</h3>
+          <div id="ID_Gameboard_Size_Container">
+            <input
+              type="number"
+              name="gameboard_size_1"
+              id="ID_Gameboard_Size_1"
+            />
+            <p>X</p>
+            <input
+              type="number"
+              name="gameboard_size_2"
+              id="ID_Gameboard_Size_2"
+            />
+            <button id="ID_Gameboard_Size_Button">Size</button>
+          </div>
+        </span>
         <div id="ID_Info_Container">
           <h3 id="ID_Info"></h3>
         </div>
