Gameboard Size Layout I

--- a/index.html
+++ b/index.html
@@ -164,17 +164,7 @@
         <span id="ID_Gameboard_Span">
           <h3 id="ID_Grid">Gameboard</h3>
           <div id="ID_Gameboard_Size_Container">
-            <input
-              type="number"
-              name="gameboard_size_1"
-              id="ID_Gameboard_Size_1"
-            />
-            <p>X</p>
-            <input
-              type="number"
-              name="gameboard_size_2"
-              id="ID_Gameboard_Size_2"
-            />
+            <input type="number" name="gameboard_size" id="ID_Gameboard_Size" />
             <button id="ID_Gameboard_Size_Button">Size</button>
           </div>
         </span>
