--- a/index.html
+++ b/index.html
@@ -161,16 +161,16 @@
 
     <div class="Class_Settings_Menu" id="ID_Settings_Menu">
       <span id="ID_Setting_Span">
-        <span id="ID_Gameboard_Span">
-          <h3 id="ID_Grid">Gameboard</h3>
-        </span>
         <div id="ID_Info_Container">
           <h3 id="ID_Info"></h3>
         </div>
+        <span id="ID_Gameboard_Span">
+          <h3 id="ID_Grid">Gameboard</h3>
         <div id="ID_Gameboard_Size_Container">
-          <input type="number" name="gameboard_size" id="ID_Gameboard_Size" />
-          <button id="ID_Gameboard_Size_Button">Size</button>
+          <input type="number" name="gameboard_size" id="ID_Gameboard_Size" min="1" max="99" placeholder="1-99" />
+          <button id="ID_Gameboard_Size_Button"></button>
         </div>
+      </span>
         <div id="ID_Colour_Container">
           <h3 id="ID_Label_Colour"></h3>
           <div class="Class_Colour_Toggle">
