--- a/index.html
+++ b/index.html
@@ -193,3 +193,14 @@
     <!-- #endregion -->
   </body>
 </html>
+
+    <!--#region HTML-Guideline -->
+/*
+================================================================================================================================================================================================================================================================================ 
+                                          Better Coding Checklist:
+
+-) Emmet snippet Lorem*10 erzeugt 10 Lorem Ipsum Sätze.  
+
+==============================================================================================================================================================================================================================================================================================*/
+
+    <!-- #endregion -->
